Deployment_Project/force-app/main/default/objects/ManagerG__c/ManagerG__c.object-meta.xml
<CustomObject>
    <description>This object stores all the Managers that are working in an organization.</description>
    <label>ManagerG</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManagerGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>