Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Stores the birth date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>