Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Stores the Email of the manager.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>