Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Store whether the manager is part of the organization or not.</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>