Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the location of the manager.</description>
    <label>Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>ManagerGs</relationshipLabel>
    <relationshipName>ManagerGs</relationshipName>
    <type>Lookup</type>
</CustomField>