Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Stores the phone number of the manager.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>