Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Manager for the project.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>ManagerGs</relationshipLabel>
    <relationshipName>ManagerGs</relationshipName>
    <type>Lookup</type>
</CustomField>