Deployment_Project/force-app/main/default/objects/ManagerG__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <description>The sum of the salaries of the developers reporting to the manager.</description>
    <label>Total Salary</label>
    <summarizedField>DeveloperG__c.Salary__c</summarizedField>
    <summaryForeignKey>DeveloperG__c.Reporting_Manager__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>