Deployment_Project/force-app/main/default/objects/ManagerG__c/validationRules/Fill_Email_and_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_Email_and_Phone</fullName>
    <active>true</active>
    <description>This rule is for checking that the manager must fill email and phone.</description>
    <errorConditionFormula>ISBLANK( Email__c ) ||  ISBLANK( Phone__c )</errorConditionFormula>
    <errorMessage>You must fill email and phone before saving.</errorMessage>
</ValidationRule>